# nio-paws-rs

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  flake.nix  keyboard-layout-left.json  keyboard-layout-right.json  keyboard-layout.json  memory.x.off  vial.json
.cargo/: config.toml
src/: central.rs  keymap.rs  peripheral.rs
