[package]
name = "nio-paws"
version = "0.2.0"
description = "Keyboard firmware written in Rust"
edition = "2024"
license = "MIT"

[dependencies]
rmk = { version = "0.7.5", features = ["split"] }

cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-stm32 = { version = "0.2.0", features = [
    "stm32f401cc",
    "defmt",
    "memory-x",
    "time-driver-any",
] }

embassy-executor = { version = "0.7", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "task-arena-size-32768",
] }
static_cell = "2"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
w25 = { version = "0.6.0", features = ["defmt"] }
dummy-pin = "1.0.0"
embassy-embedded-hal = { version = "0.3.1", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }

#embassy-futures = { version = "0.1", features = ["defmt"] }
#portable-atomic = { version = "1.5", features = ["critical-section"] }

# [features]
# avoid having to use --allow-multiple-definition linker flag
# on macOS with Apple Silicon at least
# default = ["rp-pico/disable-intrinsics"]

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

# Split keyboard example
[[bin]]
name = "central"
path = "src/central.rs"
test = false
bench = false

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
